pop up on mobile fixed

--- a/public/style.css
+++ b/public/style.css
@@ -314,7 +314,7 @@ textarea {
 #snackbar {
   visibility: hidden; /* Hidden by default. Visible on click */
   min-width: 250px; /* Set a default minimum width */
-  margin-left: -125px; /* Divide value of min-width by 2 */
+  margin-left: -145px; /* Divide value of min-width by 2 */
   background-color: #333; /* Black background color */
   color: #fff; /* White text color */
   text-align: center; /* Centered text */
@@ -323,7 +323,7 @@ textarea {
   position: fixed; /* Sit on top of the screen */
   z-index: 1; /* Add a z-index if needed */
   left: 50%; /* Center the snackbar */
-  bottom: 640px; /* 30px from the bottom */
+  bottom: 480px; /* 640px from the bottom */
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
@@ -340,23 +340,49 @@ However, delay the fade out process for 2.5 seconds */
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
   from {bottom: 0; opacity: 0;} 
-  to {bottom: 640px; opacity: 1;}
+  to {bottom: 480px; opacity: 1;}
 }
 
 @keyframes fadein {
   from {bottom: 0; opacity: 0;}
-  to {bottom: 640px; opacity: 1;}
+  to {bottom: 480px; opacity: 1;}
 }
 
 @-webkit-keyframes fadeout {
-  from {bottom: 640px; opacity: 1;} 
+  from {bottom: 480px; opacity: 1;} 
   to {bottom: 0; opacity: 0;}
 }
 
 @keyframes fadeout {
-  from {bottom: 640px; opacity: 1;}
+  from {bottom: 480px; opacity: 1;}
   to {bottom: 0; opacity: 0;}
 }
 
 
+/* Message confirmation pop up rules for smaller screens */
+@media (max-width: 767px) {
+  #snackbar {
+    bottom: 340px; 
+  }
 
+  /* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;} 
+  to {bottom: 340px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 340px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 340px; opacity: 1;} 
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 340px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+}
